--- a/dash_app/assets/custom.css
+++ b/dash_app/assets/custom.css
@@ -395,4 +395,15 @@ body {
     font-size: 14px !important; /* Smaller font size for better fit */
       padding: 6px 10px !important; /* Consistent padding across different states */
   }
+  .dropdown-label-text {
+    font-size: 18px !important; /* Overrides the default font size on mobile */
+    text-align: right !important;
+    /*white-space: nowrap !important;*/
+
+}
+.icon-size {
+  font-size: 16px !important; /* Smaller font size on mobile devices */
+  text-align: left !important;
+
+}
 }
