--- a/dash_app/assets/custom.css
+++ b/dash_app/assets/custom.css
@@ -321,33 +321,9 @@ body {
     line-height: 1; /* Adjust line spacing as needed */
 }
 
-/* Custom button styling */
-.custom-button-ai {
-    display: flex; /* Use flexbox */
-    align-items: center; /* Center vertically */
-    font-size: 2rem;
-    padding: 15px 30px;
-    margin-top: 1rem;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    background-color: var(--primary-color);
-    border: none;
-    color: white;
-    border-radius: 5px;
-    text-transform: uppercase;
-    letter-spacing: 0.05em;
-    margin-bottom: 10px;
-}
 
-.custom-button-ai:hover,
-.custom-button-ai:focus {
-    background-color: var(--hover-color);
-    outline: none;
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
-}
-
-.custom-button-ai:hover {
-    transform: translateY(-1px);
+.card-header .btn {
+  text-align: left !important;
 }
 
 
@@ -357,6 +333,7 @@ body {
       font-size: 22px; /* Larger font size on larger screens */
   }
 }
+
 
 /* Style for larger screens */
 .metric-row {
@@ -405,5 +382,17 @@ body {
   font-size: 16px !important; /* Smaller font size on mobile devices */
   text-align: left !important;
 
+}
+.card-header .btn {
+  font-size: 14px !important;
+}
+.main-subtitle {
+  font-size: 14px !important;
+}
+.tab-title-long {
+  font-size: 20px !important;
+}
+.latest-week {
+  font-size: 20px !important;
 }
 }
